URL链接和加载静态文件

--- a/templates/index_for.html
+++ b/templates/index_for.html
@@ -19,7 +19,7 @@
         <th>价格</th>
     </thead>
     <tbody>
-        {% for book in books %}
+        {% for book in books1 %}
 {#   每个表格均有若干行（由 <tr> 标签定义），每行被分割为若干单元格（由 <td> 标签定义）#}
             <tr>
                 <td>{{ book.name }}</td>
